# XMU-learning_CG

./: .gitignore
Code/20250226/: CMakeLists(Linux).txt  CMakeLists(Windows).txt
Code/20250226/assets/shaders/: fragShader.glsl  vertShader.glsl
Code/20250226/src/: main.cpp
Code/20250312/: CMakeLists(Windows).txt  CMakeLists.txt
Code/20250312/assets/shaders/: vertShader.glsl
Code/20250312/inc/: Utils.h
Code/20250312/src/: Utils.cpp  main.cpp
Code/20250326/: CMakeLists(Linux).txt  CMakeLists.txt
Code/20250326/assets/shaders/: fragShader.glsl  vertShader.glsl
Code/20250326/inc/: ImportedModel.h
Code/20250326/src/: ImportedModel.cpp  Sphere.cpp  main.cpp
Code/20250409/: CMakeLists(Windows).txt  CMakeLists.txt
Code/20250409/assets/shaders/BlinnPhongShaders/: fragShader.glsl  vertShader.glsl
Code/20250409/assets/shaders/GouraudShaders/: fragShader.glsl  vertShader.glsl
Code/20250409/assets/shaders/PhongShaders/: fragShader.glsl  vertShader.glsl
Code/20250409/src/: Torus.cpp  main.cpp
Code/20250423/: CMakeLists.txt
Code/20250423/assets/shaders/: frag1Shader.glsl  frag2Shader.glsl  vert1Shader.glsl  vert2Shader.glsl
Code/20250423/inc/: ImportedModel.h  Utils.h
Code/20250423/src/: Utils.cpp  main.cpp
Code/20250507/: CMakeLists.txt
Code/20250507/assets/shaders/: fragCShader.glsl  fragShader.glsl  vertCShader.glsl  vertShader.glsl
Code/20250507/src/: main.cpp
Code/20250521/: CMakeLists.txt
Code/20250521/assets/shaders/: fragShader.glsl  raytraceComputeShader.glsl  vertShader.glsl
Code/20250521/src/: main.cpp
Docs/: 20250226.md  20250312.md  20250326.md  20250409.md  20250423.md  20250507.md  20250521.md
